Mockup of personal website
next plan to move away from bootstrap and start the blog.

--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
         </div>
         <div id="about" class="container-fluid section">
             <h2>Hello!</h2>
-            <p>I'm an undergradate student at Columbia University studying Computer Science and Chemistry. I love working on challenging problems and currently my main interests are data science and bio-inspired computing.</p>
+            <p>I'm an undergradate student at Columbia University studying Computer Science and Chemistry.</p>
         </div>
         <div id="projects" class="container-fluid section">
             <h2>Projects</h2>
             <p>Here you'll find links to stuff I like to work on.</p>
+            <p>^^COMING SOON^^</p>
         </div>
         <script>
             $( document ).ready(function() {
