--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="#about">About</a></li>
                         <li><a href="#projects">Projects</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="tonyebrown.html">Blog</a></li>
                     </ul>
                 </div>
             </div>
