Moved away from bootstrap and crafting look

--- a/tonyebrown.html
+++ b/tonyebrown.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>Tonye Brown - Blog</title>
+        <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="blog-stylesheet.css">
     </head>
     <body>
-        <header>
+        <header id="top">
             <h1>tonye brown</h1>
             <h3 id="tagline">insert navel-gazing quote here</h3>
         </header>
