--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="#about">Who</a></li>
                         <li><a href="#projects">What</a></li>
-                        <li><a href="tonyebrown.html">How</a></li>
+                        <!--<li><a href="tonyebrown.html">How</a></li>-->
                     </ul>
             </div>
             </nav>
@@ -29,7 +29,7 @@
             <div class="content">
                 <h1>oh hi,</h1>
                 <p>Nigerian-born Canadian, currently living in NYC, here. I study Computer Science and Chemistry at Columbia. I'm also a wushu practitioner with a music obsession and a fondness for neuromorphic computing.</p>
-                <p>Tell me about yourself at <a href="mailto:t.tonyebrown@gmail.com">t.tonyebrown(at)gmail.com</a> or head <a href="">here</a> if you're looking for a resume.</p>
+                <p>Tell me about yourself at <a href="mailto:t.tonyebrown@gmail.com" target="_top">t.tonyebrown(at)gmail.com</a> <!--head <a href="">here</a> if you're looking for a resume.--></p>
             </div>
         </div>
         <div id="projects" class="container-fluid section">
